    copy-protected tapes can now be loaded, with SIO patch being disabled.
  * Bit3 Full View 80 Column card emulation.

 Changes:
 --------
  * The Sound Settings option "Fragment size" has been renamed to less cryptic
    "Hardware buffer size".

 Fixes:
 ------
  * Fixed computation of gamma adjustment - now it is applied to each of the
    three RGB channels separately.


Version 3.1.0 (2014/04/12) - release cooked at Atariada.cz

  Highlight of this release: Raspberry Pi port by Andrey Dj

  Hidden easter egg: on-screen keyboard in SDL by Christian Groessler

  All the following work has been done by Tomasz Krasuski:

 General new features:
 ---------------------
  * More accurate emulation of PAL colours (based on analysis of oscillograms
    of real PAL GTIA output)

  * Improved PAL blending, working on all grayscale pixels and is accurate now
    (can be enabled/disabled in "TV effect" display settings)

  * common sound layer implemented (SDL, JavaNVM, OSS, DOS) with synchro sound.

  * synchronized sound is now supported by both POKEY sound engines.

  * turbo mode (F12) is considerably faster

  * Added cartridge mapping used by "Turbo Hit"/"Atari Blizzard Hit".
  * Added MegaMax 2 MB cartridge mapping.
  * Added read-only support for the 4 MB Flash MegaCart mapping.
  * Added minimal support for The!Cart.

 General Fixes:
 --------------
  * fixed possible unnecessary cartridge bank switching
  * fixes and clean up in Java port 
  * fixed diagnostic cartridge cold start (doesn't send Start+Option)
  * fixed two old bugs in DOS sound (pitch being wrong and sound missing)
  * fixed keyboard not working for ncurses video and OSS sound


Version 3.0.0 (2013/03/03)

 New features:
 -------------
  * Option to automatically save configuration on exit
  * More settings saved in configuration:
    - currently attached tape file
    - cartridge settings, including currently attached cartridges
    - state of R-Time 8