@@ -25,6 +25,8 @@ Version ?.?.? (????/??/??)
  ------
   * Fixed computation of gamma adjustment - now it is applied to each of the
     three RGB channels separately.
+  * On systems that support synchronized sound: Fixed the emulator crashing
+    when Dual POKEY was enabled while High Fidelity POKEY was turned off.
 
 
 Version 3.1.0 (2014/04/12) - release cooked at Atariada.cz
